# goml-py

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  go.mod  index.html  script.js  styles.css
cmd/goml/: main.go
docs/: cli.md  governance.md  index.md  javascript.md  logic.md  migration.md  python.md  schema.md  usecases.md
examples/: basic.goml  config.goml  data.goml  package.goml  schema.goml
examples/budget-tracker/: README.md  app.js  data.goml  index.html  styles.css
internal/ast/: ast.go
internal/convert/: convert.go
internal/fmt/: formatter.go
internal/lexer/: lexer.go
internal/lint/: linter.go
internal/parser/: parser.go
internal/schema/: schema.go
internal/validator/: validator.go
js/: README.md  package-lock.json  package.json
js/src/: ast.ts  cli.ts  errors.ts  index.ts  lexer.ts  parser.ts  serializer.ts
pkg/goml/: goml.go
projects/goml-tool/: main.go
python/: pyproject.toml
python/goml/: __init__.py  __main__.py  ast.py  dumps.py  errors.py  lexer.py  parser.py
scripts/: build.sh  convert.sh  fmt.sh  lint.sh  release.sh  test.sh  validate.sh
specs/: grammar.ebnf  spec.md
usecase/: README.md  docker-compose.goml  github-actions.goml  index.html  kubernetes.goml  nginx.goml
website/: syntax-highlighter.js
